Fix: Chargement test.jpg depuis le Jar (Render)